# template-project

./: .cproject  .gitattributes  .gitignore  .gitmodules  .mxproject  .project  BLCU_H10 Debug.launch  CMakeLists.txt  CMakePresets.json  README.md  STM32H723ZGTX_FLASH.ld  arm-none-eabi.cmake  build.sh  cmake_install.cmake  compile_commands.json  pseudoCMake  state_machine.json  state_machine_gen.py  state_machine_object_descriptions.py  template-freeRTOS-project.code-workspace  template-project Debug.launch  template-project.code-workspace  template-project.elf  template-project.ioc  template-project.launch  template_BLCU Debug.launch
.cache/clangd/index/: Pins.hpp.8AEC3CA3DE04A04E.idx  Runes.hpp.9BEC11BC7D382A0F.idx  adc_example.hpp.8AD4B833C437DC79.idx  arch.h.DB03C4F5AF9EB1B5.idx  can_example.hpp.9ECCBBB6A4011BBE.idx  cc.h.51DB70EDE61C1A90.idx  clock_example.hpp.4C439DB840851F33.idx  cmsis_compiler.h.BF4E24E5C6F947B8.idx  cmsis_gcc.h.BD91AA27AD2946BC.idx  cmsis_version.h.B40569FE29576964.idx  core_cm7.h.4678EE251439F77E.idx  cpu.h.2A8025C4F3C6FC13.idx  debug.h.100645EF5B49579B.idx  def.h.E5770B1600000EF2.idx  dhcp.h.9652671C9722A37E.idx  err.h.3D5DDA96FA66AD4A.idx  etharp.h.29B263BE90E31A97.idx  etharp.h.B58C2959C0A2F016.idx  etharp.h.FDA165E540AEA1CD.idx  ethernet.h.6F627F6AA358C693.idx  ethernet.h.F395F6B17B7CAFC5.idx  ethernetif.h.ED7CFAF2AFFD3CA2.idx  examples_includes.hpp.F16C5DDB0EE4A18B.idx  exti_example.hpp.079D4E98A8CCE6F4.idx  halfbridge_example.hpp.00C8E3EC1CF6A870.idx  high_time_example.hpp.AA2BE8B62F75CCD9.idx  i2c_example.hpp.F480DE228A18CF55.idx  icmp.h.021F66B04A0A5DA7.idx  icmp.h.B82D52841AB8E3FE.idx  ieee.h.0E7FAD756C72611C.idx  init.h.46C605FA6E5FB057.idx  input_capture_example.hpp.0FB818B336C0A9E8.idx  ip.h.791039965B50D925.idx  ip.h.9B7CC9272BC2F3E4.idx  ip4.h.57595F6A17A51E88.idx  ip4.h.7EC8077DD0DE4C6E.idx  ip4_addr.h.1299A95B25D136F2.idx  ip6.h.5CA146035CA2B0C6.idx  ip6_addr.h.0E631D23952E9D9B.idx  ip_addr.h.747B15E13B041E97.idx  (+65 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-toolchain-image.yml  build.yml  c-cpp.yml  compile-checks.yml
Core/Inc/: CurrentControl.hpp  LCU.hpp  TUD.hpp  look_up_table.hpp  main.h  state_machine.hpp  stm32h7xx_hal_conf.h  stm32h7xx_it.h  template_state_machine.hpp
Core/Inc/BLCU/: BLCU.hpp
Core/Inc/BLCU/BLCU_Definition/: BLCU_Definition.hpp
Core/Inc/BLCU/BLCU_Orders/: BLCU_PrivateFunctions.hpp  BLCU_PublicFunctions.hpp
Core/Inc/BLCU/BLCU_Protections/: BLCU_Protections.hpp
Core/Inc/BLCU/BLCU_SetUps/: BLCU_SetUps.hpp
Core/Inc/BLCU/BLCU_Starts/: BLCU_Starts.hpp
Core/Inc/BLCU/BLCU_StateMachine/: BLCU_StateMachine.hpp
Core/Inc/BLCU/Utilities/: Target.hpp  orders_data.hpp
Core/Inc/Code_generation/: DataTemplate.hpp  Generator.py  OrderTemplate.hpp  Packet_descriptions.py
Core/Inc/Code_generation/Packet_generation/: DataTemplate.hpp  OrderTemplate.hpp  Packet_descriptions.py  Packet_generation.py  ProtectionsTemplate.hpp
Core/Inc/Communications/: EthernetData_template.hpp  gen.py
Core/Inc/Communications/Packets/: DataPackets.hpp  OrderPackets.hpp  Protections.hpp
Core/Inc/Communications/Packets/Packet_generation/: DataTemplate.hpp  Generator.py  OrderTemplate.hpp  Packet_descriptions.py  ProtectionsTemplate.hpp
Core/Inc/FDCBootloader/: BootloaderTFTP.hpp  FDCBootloader.hpp
Core/Inc/Runes/: Runes.hpp
Core/Src/: TUD.cpp  main (GENERATED)  main.c  main.cpp  main.txt  stm32h7xx_hal_msp.c  stm32h7xx_it.c  sysmem.c  system_stm32h7xx.c
Core/Src/Examples/: adc_example.hpp  can_example.hpp  clock_example.hpp  examples_includes.hpp  halfbridge_example.hpp  i2c_example.hpp  input_capture_example.hpp  lcu_example.hpp  low_time_example.hpp  protection_manager.hpp  pwm_example.hpp  rtc_example.hpp
Core/Src/FDCBootloader/: BootloaderTFTP.cpp  FDCBootloader.cpp
Core/Src/Runes/: ADC_runes.hpp  EXTI_runes.hpp  Encoder_runes.hpp  InputCapture_runes.hpp  Metadata.cpp  Runes ( older ones ).txt  Runes.cpp  Runes.hpp  SPI_runes.hpp  SimRunes.cpp  Timer_runes.hpp  UART_runes.hpp  generated_metadata.cpp
Debug/: makefile  sources.mk  template-project.list
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.su  stm32h7xx_it.cyclo  stm32h7xx_it.su  subdir.mk
Debug/Core/Startup/: subdir.mk
Debug/Drivers/BSP/Components/lan8742/: lan8742.su  subdir.mk
Debug/Drivers/STM32H7xx_HAL_Driver/Src/: subdir.mk
Debug/LWIP/App/: lwip.su  subdir.mk
Drivers/BSP/Components/lan8742/: lan8742.c
LWIP/App/: lwip.c  lwip.h
Tests/: runner.py  test.py  utility.py
Tests/Communications/SPI/: TestSPI.py
ci/: Dockerfile
tools/: binary_metadata_template.txt  build.py  create-new-project.py  debug_board_NO_eth.bat  debug_board_eth.bat  debug_nucleo_NO_eth.bat  debug_nucleo_eth.bat  generate_binary_metadata.py  metadata_storer.txt  requirements.txt  retrieve_flash_data.py
